@startuml

title __THREADS's Class Diagram__\n

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    namespace threads {
      class nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.ActionThread {
          ~ move : int
          + ActionThread()
          + run()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    namespace threads {
      abstract class nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch {
          ~ complete : boolean
          + Dispatch()
          + isComplete()
          # Dispatch()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    namespace threads {
      class nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.ReplayThread {
          + ReplayThread()
          + run()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    namespace threads {
      class nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.WaitThread {
          + WaitThread()
          + run()
      }
    }
  }
  

  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.ActionThread -up-|> nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch
  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch o-- nz.ac.vuw.ecs.swen225.gp20.application.ApplicationView : application
  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch o-- nz.ac.vuw.ecs.swen225.gp20.recnplay.elements.Node : baseNode
  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch o-- nz.ac.vuw.ecs.swen225.gp20.recnplay.Playback : playback
  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.ReplayThread -up-|> nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch
  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.WaitThread -up-|> nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch
  nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.WaitThread o-- nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch : dispatchThread


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
